Attempt to fix the project card overlap issue.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,6 +160,8 @@ a {
 .project-icon {
     display: block;
     font-size: 40px;
+    width: 40px;
+    height: 40px;
     margin-bottom: -0.3em;
 }
 
